manifests/05-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"promecieus:bin"},"fieldPath":"spec.template.spec.containers[?(@.name==\"promecieus\")].image"}
      ]
  labels:
    app: promecieus
  name: promecieus
  namespace: promecieus
spec:
  replicas: 1
  selector:
    deploymentconfig: promecieus
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: promecieus
        deploymentconfig: promecieus
    spec:
      containers:
        - image: ''
          imagePullPolicy: Always
          name: promecieus
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: promecieus-robot
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - promecieus
        from:
          kind: ImageStreamTag
          name: 'promecieus:bin'
      type: ImageChange
    - type: ConfigChange
