manifests/07-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: promecieus
  namespace: promecieus
spec:
  to:
    kind: Service
    name: promecieus
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
